--- a/packages/documentation/src/pages/getting-started/common-tasks/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/workflow/review.mdx
@@ -48,10 +48,12 @@ _**The person making the change is responsible** for ensuring the change is adeq
 **Jenkins** automatically **deploys** two **remote instances** of the pull request:
   - an instance that just includes static pages content
   - an instance that includes static pages and the VA.gov client application
-  - Example of deployment links:
+
+  _Example of deployment links:_
 
   ![PR deployment list](../../../../images/reviewing-feature-branches/PR-deployment-list.png)
-  - After a pull request is created, Jenkins will automatically rebuild these instances when feature branch changes are pushed
+
+After a pull request is created, **Jenkins** will automatically **rebuild** these instances when feature branch **changes are pushed**
 
   _You will need your browser configured to access the vetsgov-internal domain via the SOCKS proxy. Please see the [2. Access internal tools](/getting-started/internal-tools) for detailed instructions._
 
