--- a/packages/documentation/src/pages/getting-started/common-tasks/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/workflow/review.mdx
@@ -45,7 +45,7 @@ Manual testing can involve some separate things:
 
 _**The person making the change is responsible** for ensuring the change is adequately tested. Testing can include automated tests or manual testing by stakeholders on the review instance or staging build._
 
-### Review instand automatic creation
+### Review instance automatic creation
 
 **Jenkins** automatically **deploys** two **remote instances** of the pull request:
   - an instance that just includes static pages content
