--- a/packages/documentation/src/pages/getting-started/common-tasks/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/workflow/review.mdx
@@ -47,7 +47,7 @@ _**The person making the change is responsible** for ensuring the change is adeq
 
 ### Review instance automatic creation
 
-**Jenkins** automatically **deploys** two **remote instances** of the pull request:
+**Jenkins** automatically **deploys** two **remote instances** of a **feature branch** when a pull request is created:
   - an instance that just includes static pages content
   - an instance that includes static pages and the VA.gov client application
 
