--- a/packages/documentation/src/pages/getting-started/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/review.mdx
@@ -19,7 +19,7 @@ _Depending on the type of work done, you may need a product person to review and
 
 _If you use the Zenhub Chrome [extension](https://chrome.google.com/webstore/detail/zenhub-for-github/ogcgkffhplmphkaahpmffcafajaocjbd), there will be a "Connect this pull request with an existing issue" section at the bottom of Github's create pull request UI. You can click the "Connect with an issue" button to link the PR to the original issue in Zenhub._
 
-![PR deployment list](../../../../images/reviewing-feature-branches/connect-issue.png)
+![PR deployment list](../../../images/reviewing-feature-branches/connect-issue.png)
 
 - **Change status** of the **linked issue** to **validate**
 
@@ -30,7 +30,7 @@ _If you use the Zenhub Chrome [extension](https://chrome.google.com/webstore/det
   - after a pull request is created when the feature branch is updated
 - Test results are displayed on the pull request page
 
-![PR deployment list](../../../../images/reviewing-feature-branches/test-results.png)
+![PR deployment list](../../../images/reviewing-feature-branches/test-results.png)
 
 _See [Run Tests](/getting-started/common-tasks/test) to run these tests locally_
 
@@ -53,7 +53,7 @@ _**The person making the change is responsible** for ensuring the change is adeq
 
   _Example of deployment links:_
 
-  ![PR deployment list](../../../../images/reviewing-feature-branches/PR-deployment-list.png)
+  ![PR deployment list](../../../images/reviewing-feature-branches/PR-deployment-list.png)
 
 After a pull request is created, **Jenkins** will automatically **rebuild** these instances when feature branch **changes are pushed**
 
