update feature branch image and tweak copy with more specific explanation

--- a/packages/documentation/src/pages/getting-started/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/review.mdx
@@ -48,8 +48,8 @@ _**The person making the change is responsible** for ensuring the change is adeq
 ### Review instance automatic creation
 
 **Jenkins** automatically **deploys** two **remote instances** of a **feature branch** when a pull request is created:
-  - an instance that just includes static pages content
-  - an instance that includes static pages and the VA.gov client application
+  - an instance that just includes static pages content deployed by **va-bot**
+  - an instance that includes static pages and the VA.gov client application deployed by **va-vfs-bot**
 
   _Example of deployment links:_
 
