--- a/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
@@ -12,7 +12,7 @@ Prerequisites:
 
 If you both of those steps completed, you're ready to get started.
 
-## Setting up
+## Create new form application with Yeoman generator
 
 To begin, run the generator from the root of your local vets-website repository:
 
@@ -20,32 +20,39 @@ To begin, run the generator from the root of your local vets-website repository:
 yo @department-of-veterans-affairs/vets-website
 ```
 
-You can answer the questions with the [usage documentation](/platform/generator) as a guide. This tutorial uses the following answers to the questions asked by the generator:
+This tutorial uses the following answers to the questions asked by the generator:
 
-- What's the name of your application? This will be the default page title. `My new form`
-- What folder in `src/applications/` should your app live in? This can be a subfolder. `new-form`
-- What should be the name of your app's entry bundle? `newForm`
-- What's the root url for this app? `/new-form`
-- Is this a form app? `Y`
-- What's your form number? `XX-230`
-- What's the Google Analytics event prefix you want to use? `new-form-`
-- What's the respondent burden of this form in minutes? `30`
-- What's the OMB control number for this form? `XX3344`
-- What's the OMB expiration date (in M/D/YYYY format) for this form? `5/31/2018`
-- What's the benefit description for this form? `new form benefits`
-- Which form template would you like to start with? `Choose 'BLANK: A form without any fields'`
+| Question | Answer |
+| -------- | ------ |
+| What's the name of your application? | My new form |
+| What folder in `src/applications/` should your app live in? | new-form |
+| What should be the name of your app's entry bundle? | newForm |
+| What's the root url for this app? | /new-form |
+| Is this a form app? | Y |
+| What's your form number? | XX-230 |
+| What's the Google Analytics event prefix you want to use? | new-form- |
+| What's the respondent burden of this form in minutes? | 30 |
+| What's the OMB control number for this form? | XX3344 |
+| What's the OMB expiration date (in M/D/YYYY format) for this form? | 5/31/2018 |
+| What's the benefit description for this form? | new form benefits |
+| Which form template would you like to start with? | BLANK: A form without any fields |
 
-After you run the generator, run
+After answering the questions, the generator will create several source files for a new form application in `/src/applications/new-form`.
 
+## Open the new form application
+
+Next you'll need to start the site up locally (restart this task if it is already running):
 ```bash
 yarn watch
 ```
 
-If you already had it running, restart the watch commmand. After the watch task successfully starts up, navigate to http://localhost:3001/new-form (or the path you entered when asked by the generator). You should see something like this:
+Then navigate to http://localhost:3001/new-form.
+
+You should see something like this:
 
 ![](../../images/forms/initial-form.png)
 
-## Updating your form
+## Update your form
 
 Now that you're up and running, we can add a new page and field to our form. If you open up `src/applications/new-form/config.js`, you should see a `formConfig` variable:
 
