--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -15,9 +15,9 @@ graph LR
 
 VAFS consists of several different pieces:
 
-- Standardized inputs and field sets for common types of form data
-- Common validation functions used for different types of data
-- A standardized data flow within the application that triggers validation and updates conditionally displayed UI
+- Standardized **inputs and field sets** for common types of form data
+- **Validation functions** used for commonly collected types of data
+- A standardized **data flow** within the application that triggers validation and updates conditionally displayed UI
 - Hooks for custom validation, hiding/showing fields, and writing custom fields and widgets
 - Save and restore form data using the VA.gov save in progress and prefill APIs
 
