add test target to accessibility tests

--- a/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/test.mdx
@@ -11,7 +11,7 @@
 | Unit | `yarn test:unit` | `yarn test:unit ./PATH-TO-TEST-FILE` | no | `*.unit.spec.js(x)` | [Mocha](https://mochajs.org/), [Chai](http://chaijs.com/), [Sinon](https://sinonjs.org/), [JSDom](https://github.com/jsdom/jsdom), [Enzyme](https://airbnb.io/enzyme/) |
 | Lint | `yarn lint` | `yarn lint:js` or `yarn lint:sass` | no | `*.js`, `*.scss` | [ESLint](https://eslint.org/), [Prettier](https://prettier.io/), [sass-lint](https://github.com/sasstools/sass-lint) |
 | End to end | `yarn test:e2e` | `yarn test:e2e ./PATH-TO-TEST-FILE` | yes | `*.e2e.spec.js` | [Nightwatch.js](http://nightwatchjs.org/) |
- | Accessibility | `yarn test:accessibility` | | yes | | [Nightwatch.js](http://nightwatchjs.org/) |
+ | Accessibility | `yarn test:accessibility` | | yes | all pages in `sitemap.xml` | [Nightwatch.js](http://nightwatchjs.org/) |
 
 ## Requires local build or run
 
