fix sentence casing

--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -2,7 +2,7 @@
 
 Code goes through several steps to get to production. This document describes this process. It should also be noted that this is the same flow for both content and code changes.
 
-## Automated Deployment Schedule
+## Automated deployment schedule
 
 | Application | Branch | Changes in by | Deployment Start | Release History |
 | --- | --- | --- | --- | --- |
