--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -1,10 +1,8 @@
-:book: [*US Forms System Documentation*](../README.md) :arrow_right: [*Building a Form*](./README.md)
-
 # Available form features and usage guidelines
 
-These form features are available in the US Forms System library. We've provided information about how to implement them in your form.
+These form features are available in the VAFS library. We've provided information about how to implement them in your form.
 
-### In this guide
+## In this guide
 
 - [Form instructions](#form-instructions)
 - [Form footer](#form-footer)
@@ -23,18 +21,15 @@ These form features are available in the US Forms System library. We've provided
 - [Required checkbox before form submission](#required-checkbox-before-form-submission)
 - [Remote error and event monitoring](#remote-error-and-event-monitoring)
 
-### Form instructions
+## Form instructions
 
 This widget allows you to provide important information, warnings, or step-by-step instructions to users before they fill out a form.
 
-![Instructions for an example healthcare benefits form](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Instructions.png)
+![Instructions for an example healthcare benefits form](../../images/forms/Instructions.png)
 
-#### Usage guidelines
+### Usage guidelines
 
-Unlike most components, the `Introduction` React component is in the US Forms System Starter App at https://github.com/usds/us-forms-system-starter-app/blob/master/js/components/Introduction.jsx, not the library itself.
-
-To include the component, set the `formConfig.introduction` property to a reference to that component. Edit the HTML inside the component to change the content. For example:
-
+To include the component, set the `formConfig.introduction` property to a reference to that component. Edit the JSX inside the component to change the content. For example: 
 ```js
 import Introduction from '../components/Introduction.jsx';
 
@@ -45,15 +40,15 @@ const formConfig = {
 };
 ```
 
-### Form footer
+## Form footer
 
 This widget appears at the bottom of every page of a multi-page form. It is not required.
 
-![A form footer that lists phone numbers to call for help](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Footer.png)
+![A form footer that lists phone numbers to call for help](../../images/forms/Footer.png)
 
-#### Usage guidelines
+### Usage guidelines
 
-To define footer content, create a React component that renders HTML to act as a footer. The [US Forms System Starter App](https://github.com/usds/us-forms-system-starter-app) does not include a footer, but the design of this component would be very similar to the Introduction component that the starter app contains. For example:
+To define footer content, create a React component that renders HTML to act as a footer. The design of this component would be very similar to the Introduction component, described earlier. For example:
 
 ```js
 import Footer from '../components/Footer.jsx';
@@ -64,9 +59,9 @@ const formConfig = {
 };
 ```
 
-For the code implementation, see [FormApp.jsx](https://github.com/usds/us-forms-system/blob/master/src/js/containers/FormApp.jsx).
+For the code implementation, see [FormApp.jsx](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/js/containers/FormApp.jsx).
 
-### Progress bar
+## Progress bar
 
 The `SegmentedProgressBar` component calculates the number of chapters completed and displays them in a horizontal stack of blocks. It indicates to the user how much of a multi-chapter or multi-page form they've completed. It includes:
 
@@ -74,25 +69,25 @@ The `SegmentedProgressBar` component calculates the number of chapters completed
 - A number to indicate how many pages there are within each section
 - The title of that section
 
-![A progress bar indicating that three of six parts of a form are completed](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Progress-Bar.png)
+![A progress bar indicating that three of six parts of a form are completed](../../images/forms/Progress-Bar.png)
 
-#### Usage guidelines
+### Usage guidelines
 
 In `formConfig`, define your form's chapters and the pages contained inside each chapter. To add a progress bar to a multi-page form, create chapters with a single page each. We don't recommend including a progress bar on single-page forms.
 
-US Forms System includes the progress bar by default, and will display automatically when the chapters and pages are defined. To remove the progress bar, edit the `FormNav.jsx` component to remove the defined `SegmentedProgressBar` in the HTML.
+VAFS includes the progress bar by default, and will display automatically when the chapters and pages are defined. To remove the progress bar, edit the `FormNav.jsx` component to remove the defined `SegmentedProgressBar` in the HTML.
 
 For the code implementation, see:
-- [FormNav.jsx](../../src/js/components/FormNav.jsx)
-- [SegmentedProgressBar.jsx](../../src/js/components/SegmentedProgressBar.jsx)
+- [FormNav.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/FormNav.jsx)
+- [SegmentedProgressBar.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/SegmentedProgressBar.jsx)
 
-### Title and Subtitle
+## Title and Subtitle
 
 The Title and Subtitle represent the name and form number, respectively. The subtitle displays near the form title.
 
-![A title and subtitle of a form with the title highlighted](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Title.jpg)
+![A title and subtitle of a form with the title highlighted](../../images/forms/Title.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 Define the title and subtitle in `formConfig`. For example:
 
@@ -105,23 +100,23 @@ const formConfig = {
 };
 ```
 
-For the code implementation, see [FormTitle.jsx](../../src/js/components/FormTitle.jsx).
+For the code implementation, see [FormTitle.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/FormTitle.jsx).
 
-### Date
+## Date
 
 Defines a date picker with validations.
 
-![A form date selector widget with June 8, 1995 selected](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Date.jpg)
+![A form date selector widget with June 8, 1995 selected](../../images/forms/Date.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 Define these fields in the `schema` and then reference them in the `uiSchema`. These date field definitions are available:
 
-- [date.js](../../src/js/definitions/date.js)
-- [dateRange.js](../../src/js/definitions/dateRange.js)
-- [currentOrPastDate.js](../../src/js/definitions/currentOrPastDate.js)
-- [monthYear.js](../../src/js/definitions/monthYear.js)
-- [monthYearRange.js](../../src/js/definitions/monthYearRange.js)
+- [date.js](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/definitions/date.js)
+- [dateRange.js](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/definitions/dateRange.js)
+- [currentOrPastDate.js](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/definitions/currentOrPastDate.js)
+- [monthYear.js](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/definitions/monthYear.js)
+- [monthYearRange.js](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/definitions/monthYearRange.js)
 
 For example:
 
@@ -143,21 +138,21 @@ const formConfig = {
 };
 ```
 
-### Alerts
+## Alerts
 
 Alerts are included automatically in fields that include validation. Taken from USWDS, alerts appear in several color variations, with or without icons, to indicate a warning, an error, or contextual information.
 
-#### Usage guidelines
+### Usage guidelines
 
-For examples of how alerts are used, see https://github.com/usds/us-forms-system/tree/master/src/js/widgets.
+For examples of how alerts are used, see https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/js/widgets.
 
-### Radio button group
+## Radio button group
 
 A group of options where the user can only select a single item.
 
-![A question with four radio button options and one selected](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Boolean-radio.jpg)
+![A question with four radio button options and one selected](../../images/forms/Boolean-radio.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 The data for a group of radio buttons is similar to the data for a select field (i.e., `string` type with an `enum` property), which means the `SelectWidget` will be rendered by default.
 
@@ -188,15 +183,15 @@ uiSchema: {
 }
 ```
 
-For the code implementation, see [`RadioWidget`](../../src/js/widgets/RadioWidget.jsx).
+For the code implementation, see [RadioWidget](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/RadioWidget.jsx).
 
-### Checkbox group
+## Checkbox group
 
 A group of options where the user can select multiple items.
 
-![A multiple choice question with two options selected](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Boolean-checkbox.jpg)
+![A multiple choice question with two options selected](../../images/forms/Boolean-checkbox.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 Each individual checkbox is used to store `boolean` data. To include a group of checkboxes, include separate fields for each checkbox, with `type: 'boolean'` passed to the `schema`.
 
@@ -237,32 +232,32 @@ uiSchema: {
 }
 ```
 
-For the code implementation, see [`CheckboxWidget`](../../src/js/widgets/CheckboxWidget.jsx).
+For the code implementation, see [CheckboxWidget](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/CheckboxWidget.jsx).
 
-### Required field
+## Required field
 
 Require any field. Validation is included.
 
-![A field with an error indicating a response is required](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Required-field.jpg)
+![A field with an error indicating a response is required](../../images/forms/Required-field.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 For information on requiring fields or components, see "[About the schema and uiSchema objects](./about-the-schema-and-uischema-objects.md)."
 
-### Contextual error message
+## Contextual error message
 
 This indicates to the user that they have either not filled out a required field or they have not done so within the form's parameters. You can set a custom error message to help the user progress with the form.
 
-![A question with no response and an error indicating a response is required](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Error.jpg)
+![A question with no response and an error indicating a response is required](../../images/forms/Error.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 There are several ways that form fields can be invalid, such as a required field is blank, the entry is too short or long, or the entry does not satisfy a specific format.
 
 - **To show an error on a blank field that is required**, include the field in the array under the `required` property in the `schema`. An error on that field will automatically be rendered if the field is blank.
 - **To show an error on a field for any other reason** (e.g., it has not met certain data requirements), pass a validation function to the array for the `ui:validations` property under that field in `uiSchema`.
 
-The error message that is displayed can either be a default message or one that you specify. There are several [default error messages](../../src/js/validation.js) for different situations.
+The error message that is displayed can either be a default message or one that you specify. There are several [default error messages](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/validation.js) for different situations.
 
 To show a custom error message, add the message to the `ui:errorMessages` object in the `uiSchema` as a key value pair:
 
@@ -298,23 +293,23 @@ uiSchema: {
 }
 ```
 
-### Duplicate field validation
+## Duplicate field validation
 
 This feature validates that a user has correctly entered duplicate data in two fields.
 
-![Two fields with an error indicating the value of the entries must match](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Duplicate-Field-Validation.jpg)
+![Two fields with an error indicating the value of the entries must match](../../images/forms/Duplicate-Field-Validation.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 For more information, see "[Validating a field based on other fields in the same object](./common-patterns-for-building-forms.md#validating-a-field-based-on-other-fields-in-the-same-object)."
 
-### Conditional form fields
+## Conditional form fields
 
 You can set follow up questions to appear only if the user answers a form question a particular way.
 
-![A question with a yes/no answer, and additional fields that displayed when the answer was Yes](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Conditional-Fields.jpg)
+![A question with a yes/no answer, and additional fields that displayed when the answer was Yes](../../images/forms/Conditional-Fields.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 There are 2 fields you can use to conditionally expand a form field:
 - `expandUnder`: This property takes the name of the other field upon which your field is shown.
@@ -356,15 +351,15 @@ Your config file might look like this:
 }
 ```
 
-For the code implementation, see [`helpers.js`](../../src/js/state/helpers.js).
+For the code implementation, see [helpers.js](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/state/helpers.js).
 
-### Sequential duplicate form groups
+## Sequential duplicate form groups
 
 Use this feature to collect multiple items with the same form questions, such as addresses in a time period, jobs in a time period, or employment in a time period.
 
-![A form section showing basic information about multiple insurance policies](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Sequential-Duplicate-Form-Groups.jpg)
+![A form section showing basic information about multiple insurance policies](../../images/forms/Sequential-Duplicate-Form-Groups.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 To display multiple groups of the same form questions, define the data in the `schema` as `type: 'array'`, with each group of questions as an `item` in that `array`. The `schema` and `uiSchema` for the group of questions within the `items` object is structured the same as other fields.
 
@@ -398,27 +393,27 @@ Your config file might look like this:
 }
 ```
 
-### Review page
+## Review page
 
 When you build a form with more than one chapter (shown by the segments in a progress bar), the review page lets a user edit all of their entered form data without having to go back one page at a time.
 
-![Multiple collapsed summaries of sections within a form](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Review-Page.jpg)
+![Multiple collapsed summaries of sections within a form](../../images/forms/Review-Page.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 The review page renders the form data in review mode automatically. However, you can pass some specific options to the form config to customize some review features.
 
 This property is nested directly under `uiSchema`:
 - `'ui:reviewWidget'`: takes a widget component to render on the review page for that field. Default review widgets are automatically rendered, so only use this if you need to customize the review widget that is used.
 
-These properties are nested under `uiSchema: { `ui:options`: {} }`:
+These properties are nested under `uiSchema: { 'ui:options': {} }`:
 - `hideOnReview`: Hides the field on the review page; takes a `boolean`
 - `hideOnReviewIfFalse`: Hides the field on the review page when the field value is `false`; takes a `boolean`
 - `keepInPageOnReview`: By default, array fields that are displayed on a single page in a form, such as information for multiple dependents, are displayed in a separate section on the review page. To keep the information in a single section on a review page, set this property.
 
-For the code implementation, see the [`review` folder](../../src/js/review).
+For the code implementation, see the [review folder](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/review).
 
-### Required checkbox before form submission
+## Required checkbox before form submission
 
 Use this feature to require a user to agree they have read terms and conditions, a privacy policy, or any other text before submitting your form. It includes a checkbox and short-form text that can include relevant links to additional information on separate pages.
 
@@ -428,7 +423,6 @@ To configure this feature, place a `preSubmitInfo` object in the `formConfig`. T
 * `field`: The name of the form field for the required checkbox. This field has the value `true` in the submitted form data.
 * `label`: A text string or React element that labels the checkbox.
 * `error`: A text string or React element displayed as an error message if the user attempts to submit the form without checking the checkbox.
-</dl>
 
 This is an example of `preSubmitInfo`:
 
@@ -441,15 +435,15 @@ preSubmitInfo: {
 }
 ```
 
-![Required checkbox before form submission](https://raw.githubusercontent.com/wiki/usds/us-forms-system/images/Required-Checkbox.jpg)
+![Required checkbox before form submission](../../images/forms/Required-Checkbox.jpg)
 
-#### Usage guidelines
+### Usage guidelines
 
 If you don't specify a `preSubmitInfo` section, no notice or checkbox appears above the submit button. Most applications will want to give some sort of notice to the user before they submit the form. Although this section is optional, we recommend you specify it.
 
-For the code implementation, see [`PreSubmitSection`](../../src/js/components/PreSubmitSection.jsx) and [`SubmitController`](../../src/js/review/SubmitController.jsx).
+For the code implementation, see [PreSubmitSection](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/components/PreSubmitSection.jsx) and [SubmitController](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/review/SubmitController.jsx).
 
-### Remote error and event monitoring
+## Remote error and event monitoring
 
 If you provide a function for `formConfig.recordEvent`, the library calls that function when notable events occur. If you do not provide a function, the library logs these events onto the browser console.
 
@@ -477,8 +471,6 @@ formConfig = {
 };
 ```
 
-### Usage guidelines
+## Usage guidelines
 
 Web applications can fail for many reasons, including bad Internet connections, outdated browsers, and misbehaved browser extensions. Even if you test thoroughly, users may experience frustrating errors that they do not or cannot report. We highly recommend that you use an error-reporting and/or event-reporting service to track the use of your forms. Examples of services that could be used are Google Analytics, Errorception, Sentry, Airbrake, and Raygun.
-
-[Back to *Building a Form*](./README.md)
