add tests table

--- a/packages/documentation/src/pages/architecture/unit-testing.mdx
+++ b/packages/documentation/src/pages/architecture/unit-testing.mdx
@@ -1,5 +1,16 @@
 ## How do unit tests work?
 
+#### List of tests
+
+| Test Type         | Description                                                                                                                                                                                                                                                                           | File Format   | Where                                                                                                              | When                                                                                        |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------|--------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------|
+| Unit              | Test for individual functions or components                                                                                                                                                                                                                                           | .unit.spec.js | Any .unit.spec.js file located in the /src folder. Typically located in a directory close to the code being tested | Locally through npm script commands<br/><br/>Jenkins build (Unit)<br/><br/>After merging to master          |
+| e2e               | Test a specific user flow from beginning to end                                                                                                                                                                                                                                       | .e2e.spec.js  | Any .e2e.spec.js file located in the /src folder. Typically located in a directory close to the code being tested  | Locally through npm script commands<br/><br/>Jenkins build (e2e)<br/><br/>After merging to master           |
+| Visual Regression | Used for testing each page for any visual changes. This should help us catch any site wide changes that might introduce bugs due to a visual code change. <br/><br/>To find out more about visual regression testing go to: <br/>[visual-regression-testing](/architecture/visual-regression-testing) |               | Test is run through a script located at /src/platform/testing/visual-regression/index.js                           | Locally through npm script commands                                                         |
+| Accessibility     | Tests accessibility of pages and components                                                                                                                                                                                                                                           |               | **axe-core**: automated accessibility testing                                                                      | Locally through npm script commands<br/><br/>Jenkins build (accessibility)<br/><br/>After merging to master |
+| Linting           | Test code quality                                                                                                                                                                                                                                                                     | .js           | Any .js file located in the /src folder.                                                                           | During the pre-commit hook<br/><br/>Jenkins build (Lint)                                            |
+| Code Coverage     | How much code is covered with tests                                                                                                                                                                                                                                                   |               | Any .js file located in the /src folder.                                                                           | Jenkins build (Unit)                                                                        |
+
 #### Where they live
 - Tests can live anywhere in the `src` directory, but in general are located in a directory close to the code or application that they are written to test.
 - The `.unit.spec.js` file extension is used for unit tests, while `.e2e.spec.js` is used for end-to-end (E2E) tests.
